<resources>
    <string name="app_name">Random Album Generator</string>

    <!--String Names: activity_album.xml-->
    <string name="openInSpotifyButton">Open in Spotify</string>
    <string name="findNewAlbumButton">Find A New Album</string>

    <!--String Names: activity_curated_album.xml-->
    <string name="returnToMainMenu">Return to Main Menu</string>

    <!--String Names: activity_main.xml-->
    <string name="loginButton">Login</string>
    <string name="welcomeText">Welcome to the Random Album Generator!</string>
    <string name="moreDescriptionText">Let Spotify Find Your Next Favorite Album!</string>
    <string name="evenMoreText">Select a Genre or One of Your Spotify Playlists to Find a Album!</string>>

    <!--String Names: activity_genre.xml-->
    <string name="selectGenreTextView">Select a Genre</string>

    <!--String Names: activity_menu.xml-->
    <string name="albumOfTheDay">Curated Album of The Day</string>
    <string name="tapToLearnMore">Tap on the Cover to Learn More!</string>
    <string name="selectOptionTextView">Select an Album using:</string>
    <string name="selectGenre">Genre</string>
    <string name="selectPlaylist">User Playlist</string>
</resources>
