<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundBlack">

    <ImageView
        android:id="@+id/curatedAlbumCover"
        android:layout_width="303dp"
        android:layout_height="261dp"
        android:layout_marginStart="82dp"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="81dp"
        android:layout_marginRight="81dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/backgroundBlack" />

    <Button
        android:id="@+id/openCuratedAlbumButton"
        android:layout_width="214dp"
        android:layout_height="62dp"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="110dp"
        android:layout_marginRight="110dp"
        android:background="@color/lightGreen"
        android:onClick="directToAlbumPage"
        android:text="@string/openInSpotifyButton"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curatedAlbumSelection" />

    <Button
        android:id="@+id/findANewAlbumButton"
        android:layout_width="214dp"
        android:layout_height="62dp"
        android:layout_marginStart="110dp"
        android:layout_marginLeft="110dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="110dp"
        android:layout_marginRight="110dp"
        android:background="@color/lightGreen"
        android:onClick="directToMenuActivity"
        android:text="@string/returnToMainMenu"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/openCuratedAlbumButton" />

    <TextView
        android:id="@+id/curatedAlbumSelection"
        android:layout_width="303dp"
        android:layout_height="60dp"
        android:layout_marginStart="82dp"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="83dp"
        android:layout_marginRight="83dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.464"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/curatedAlbumCover" />
</android.support.constraint.ConstraintLayout>